--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ dist/
 node_modules/
 app/node_modules/
 app/dist/
-app/client/dist/
+#app/client/dist/
 app/client/node_modules/
 electron_dist/
 freezer-*.tgz
