--- a/app/client/package.json
+++ b/app/client/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "watch": "vue-cli-service build --watch",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
+    "watch": "vue-cli-service build --watch"
   },
   "dependencies": {
     "@mdi/font": "^5.5.55",
@@ -14,11 +15,13 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-esc": "^3.0.1",
+    "vue-i18n": "^8.17.3",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^1.0.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -26,6 +29,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
