--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "freezer",
   "private": true,
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "",
   "scripts": {
     "pack": "electron-builder --dir",
@@ -16,6 +16,7 @@
   },
   "build": {
     "appId": "com.exttex.freezer",
+    "productName": "Freezer",
     "extraResources": [
       {
         "from": "app/assets/**",
@@ -29,12 +30,18 @@
     ],
     "win": {
       "target": [
-        "portable"
+        "portable", "nsis"
       ],
       "icon": "build/icon.ico",
       "asarUnpack": [
         "app/node_modules/nodeezcryptor/**"
       ]
+    },
+    "nsis": {
+      "oneClick": true,
+      "perMachine": false,
+      "allowElevation": false,
+      "allowToChangeInstallationDirectory": false
     },
     "linux": {
       "target": [
