--- a/app/client/package.json
+++ b/app/client/package.json
@@ -10,28 +10,28 @@
     "watch": "vue-cli-service build --watch"
   },
   "dependencies": {
-    "@mdi/font": "^5.5.55",
+    "@mdi/font": "^5.8.55",
     "axios": "^0.19.2",
     "roboto-fontface": "*",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-esc": "^3.0.1",
     "vue-i18n": "^8.17.3",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.4.9",
     "vue-socket.io": "^3.0.10",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.3.16"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.8",
+    "@vue/cli-plugin-router": "^4.5.8",
+    "@vue/cli-service": "^4.5.8",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
+    "sass": "^1.29.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "~2.0.7",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
