--- a/app/client/package.json
+++ b/app/client/package.json
@@ -18,6 +18,7 @@
     "vue-i18n": "^8.17.3",
     "vue-router": "^3.4.9",
     "vue-socket.io": "^3.0.10",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.3.16"
   },
   "devDependencies": {
