--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "freezer",
   "private": true,
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "",
   "main": "background.js",
   "scripts": {
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "arg": "^4.1.3",
     "axios": "^0.19.2",
     "browser-id3-writer": "^4.4.0",
+    "chalk": "^4.1.0",
     "discord-rpc": "^3.1.4",
     "express": "^4.17.1",
     "lastfmapi": "^0.1.1",
