--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "freezer",
   "private": true,
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "",
   "scripts": {
     "pack": "electron-builder --dir",
@@ -30,7 +30,8 @@
     ],
     "win": {
       "target": [
-        "portable", "nsis"
+        "portable",
+        "nsis"
       ],
       "icon": "build/icon.ico",
       "asarUnpack": [
