--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "freezer",
   "private": true,
-  "version": "1.1.7",
+  "version": "1.1.10",
   "description": "",
   "main": "background.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "browser-id3-writer": "^4.4.0",
     "chalk": "^4.1.0",
+    "compare-versions": "^3.6.0",
     "discord-rpc": "^3.1.4",
     "express": "^4.17.1",
     "lastfmapi": "^0.1.1",
