--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "freezer",
   "private": true,
-  "version": "1.1.13",
+  "version": "1.1.14",
   "description": "",
   "main": "background.js",
   "scripts": {
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "arg": "^4.1.3",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "browser-id3-writer": "^4.4.0",
     "chalk": "^4.1.0",
+    "cheerio": "^1.0.0-rc.5",
     "compare-versions": "^3.6.0",
     "discord-rpc": "^3.1.4",
     "express": "^4.17.1",
