--- a/app/client/package.json
+++ b/app/client/package.json
@@ -13,13 +13,13 @@
     "@mdi/font": "^5.9.55",
     "axios": "^0.21.1",
     "roboto-fontface": "*",
+    "socket.io-client": "^4.1.2",
     "vue": "^2.6.12",
     "vue-esc": "^3.0.1",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.4.9",
-    "vue-socket.io": "^3.0.10",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.4.2"
+    "vuetify": "^2.5.1"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.0.0",
@@ -33,7 +33,7 @@
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "^2.0.9",
     "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.7.2"
   },
   "eslintConfig": {
     "root": true,
